16. Güzel bir örnek

--- a/rama/rama.css
+++ b/rama/rama.css
@@ -12,6 +12,7 @@
     img  {
         width: 400px;
         border: 0;
+        display: block;
         margin-left: auto;
         margin-right: auto;
     }
