--- a/rama/rama.css
+++ b/rama/rama.css
@@ -16,6 +16,9 @@
         margin-left: auto;
         margin-right: auto;
     }
+    div img {
+        display: inline;
+    }
     .ayet {
         font-family: georgia, serif;
         color: green;
