26. Ona "ol" der

--- a/rama/rama.css
+++ b/rama/rama.css
@@ -22,6 +22,9 @@
     div img {
         display: inline;
     }
+    .preWrap {
+        white-space: pre-wrap;
+    }
     .ayet {
         font-family: georgia, serif;
         color: green;
