--- a/ders/ders.css
+++ b/ders/ders.css
@@ -51,4 +51,26 @@
         width: 100%;
     }
 }
+  table {
+    border-collapse: collapse;
+    margin: auto;
+  }
+  th {
+    font-weight: normal;
+    padding-right: 4px;
+  }
+  td {
+    padding: 6px;
+    border: 0.5px solid;
+    text-align: center;
+  }
+  .left {
+    text-align: left;
+  }
+  .wide {
+    min-width: 110px;
+  }
+  .head {
+    font-weight: bold;
+  }
 
