--- a/esma/esma.css
+++ b/esma/esma.css
@@ -16,6 +16,7 @@
         width: 400px;
         border: 0;
         display: block;
+        margin-top: 8px;
         margin-left: auto;
         margin-right: auto;
     }
