--- a/KK/korunmus.css
+++ b/KK/korunmus.css
@@ -75,3 +75,7 @@
   #buton { display: none; }
   #menu1 { display: block; }
 }
+  iframe {
+    width: clamp(400px, 100%, 560px);
+    aspect-ratio: 16/9;
+  }
