--- a/ders/ders.css
+++ b/ders/ders.css
@@ -11,7 +11,7 @@
         text-decoration: none;
         font-weight: normal;
     }
-    a:hover { font-weight: bold; }
+    /* a:hover { font-weight: bold; } */
     a:focus, a:hover {
         background: #ddd;
     }
