--- a/cuma/cuma.css
+++ b/cuma/cuma.css
@@ -68,6 +68,10 @@
         text-align: justify;
         direction: rtl;
       }
+    iframe {
+		width: clamp(400px, 100%, 560px);
+		aspect-ratio: 16/9;
+    }
     @font-face {
         font-family: Zekr;
         src: url("/Rehber/style/ZEKRQURAN.TTF");
